adding langchain-experimental to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 langchain==0.2.16
-langchain-openai==0.1.22
+langchain-openai==0.1.
+langchain-experimental==0.065
 streamlit==1.37.1
 openai==1.42.0
 tiktoken==0.7.0
