--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 langchain==0.2.16
-langchain-openai==0.1.
-langchain-experimental
+langchain-openai==0.1.22
+langchain-experimental==0.0.65
 streamlit==1.37.1
 openai==1.42.0
 tiktoken==0.7.0
